[project]
name = "to-quest"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "mss>=10.1.0",
    "pyautogui>=0.9.54",
    "loguru>=0.7.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "openai>=2.21.0",
]

[tool.uv.sources]
dumplings = { path = "./Dumplings", editable = true }

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
